flux/apps/cluster1/homebox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
spec:
  template:
    spec:
      containers:
      - name: homebox
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        hostPath:
          path: /var/lib/homebox
          type: Directory
