flux/apps/cluster1/homebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"
  labels:
    ingress.cluster.local/probe: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - homebox.home.wugi.info
    secretName: homebox-ingress-certs
  rules:
  - host: homebox.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: homebox
            port:
              number: 80
